@@ -1,0 +1,3 @@
+module.exports = function isArguments(obj) {
+  return Object.prototype.toString.call(obj) == '[object Arguments]'
+}
